--- a/_config.yml
+++ b/_config.yml
@@ -160,7 +160,7 @@ mathjax:
 
 
 # Swiftype Search API Key
-#swiftype_key:
+swiftype_key: TusNeCrDxDgYxz1gyd5p
 
 # Baidu Analytics ID
 #baidu_analytics:
@@ -175,7 +175,7 @@ duoshuo_shortname: ljh-duoshuo
 #jiathis:
 
 # Share
-#duoshuo_share: true
+duoshuo_share: true
 
 # Google Webmaster tools verification setting
 # See: https://www.google.com/webmasters/
